fix(comp:select): fix selector item text overflowed style (#1113)
singled select item should show ellipsis when text overflowd
single multipled select item shouldn't shove following elements into a new line

--- a/packages/components/_private/selector/style/multiple.less
+++ b/packages/components/_private/selector/style/multiple.less
@@ -8,6 +8,10 @@
     &-content {
       padding: @select-padding-vertical @select-multiple-padding;
       font-size: @select-font-size;
+
+      .@{overflow-prefix}-item {
+        max-width: calc(100% - @select-icon-font-size);
+      }
     }
 
     &-item {
@@ -31,7 +35,6 @@
     &-overflow {
       line-height: @select-item-line-height;
     }
-
   }
 
   &.@{selector-prefix}-searchable .@{selector-prefix}-overflow,
